# quetty

./: .env.example  .gitignore  .pre-commit-config.yaml  AZURE_DEVICE_CODE_AUTH.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  config.default.toml  config.example.toml  install.ps1  install.sh  keys.default.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  ci.yml  lint.yml  nightly.yml  notion-notification.yml  release.yml  test.yml  update-homebrew.yml
docs/: AUTHENTICATION.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  CRATES_IO_AUTOMATION.md  INSTALLATION.md  THEMING.md  TRAFFIC_SIMULATOR.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: prepare_crates_release.sh  release.sh
server/: Cargo.toml  auth_config_example.toml  demo_auth.rs  test_debug.rs
server/src/: azure_management_api.rs  bulk_operations.rs  consumer.rs  encryption.rs  lib.rs  main.rs  producer.rs  service_bus_manager.rs  taskpool.rs
server/src/auth/: auth_provider.rs  auth_setup.rs  auth_state.rs  azure_ad.rs  connection_string.rs  errors.rs  mod.rs  provider.rs  sas_token_generator.rs  service_bus_auth.rs  token_cache.rs  token_refresh_service.rs  types.rs
server/src/bulk_operations/: collector.rs  deleter.rs  handler.rs  mod.rs  resource_guard.rs  sender.rs  types.rs
server/src/common/: errors.rs  mod.rs  rate_limiter.rs
server/src/model/: mod.rs
server/src/service_bus_manager/: azure_management_client.rs  command_handlers.rs  commands.rs  consumer_manager.rs  errors.rs  manager.rs  producer_manager.rs  queue_statistics_service.rs  responses.rs  types.rs
server/src/utils/: env.rs  mod.rs
server/tests/: auth_flow_integration.rs  azure_error_handling_integration.rs  azure_management_integration.rs  azure_pagination_integration.rs  cache_integration.rs  performance_integration.rs  property_based_tests.rs  rate_limiting_integration.rs  test_config.rs  token_refresh_integration.rs
themes/catppuccin/: latte.toml  macchiato.toml  mocha.toml
themes/nightfox/: carbonfox.toml  duskfox.toml  nightfox.toml  nordfox.toml
themes/quetty/: dark.toml
traffic-simulator/: Cargo.toml
traffic-simulator/src/: config.rs  consumer.rs  main.rs  password.rs  producer.rs  service_bus.rs
ui/: .env.example  Cargo.toml  config.discovery.toml  config.example.toml  keys.default.toml
ui/docs/: component_state_pattern.md  error_handling_guide.md  taskmanager.md  validation_patterns.md
ui/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  validation.rs
ui/src/app/: application_lifecycle.rs  bulk_operation_processor.rs  dev_mocks.rs  mod.rs  model.rs  queue_state.rs  remount.rs  task_manager.rs  update.rs  view.rs
ui/src/app/managers/: message_manager.rs  mod.rs  queue_manager.rs  queue_stats_manager.rs  state_manager.rs
ui/src/app/model/: async_operations.rs  initialization.rs  mod.rs  popup_management.rs  state_management.rs  update_handler.rs
ui/src/app/updates/: auth.rs  azure_discovery.rs  config.rs  help.rs  loading.rs  messages.rs  mod.rs  namespace.rs  popup.rs  queue.rs  theme.rs
ui/src/app/updates/azure_discovery/: connection_handler.rs  mod.rs  namespace_handler.rs  resource_group_handler.rs  service_bus_handler.rs  subscription_handler.rs
ui/src/app/updates/messages/: async_operations.rs  bulk.rs  bulk_execution.rs  delete.rs  dlq.rs  loading.rs  mod.rs  pagination.rs  utils.rs
ui/src/app/updates/messages/bulk_execution/: delete_operations.rs  display_helpers.rs  message_collector.rs  mod.rs  operation_setup.rs  send_operations.rs  task_manager.rs  validation.rs
ui/src/app/updates/messages/updates/: bulk_selection.rs  composition.rs  editing.rs  mod.rs  state_management.rs
ui/src/app/views/: mod.rs
ui/src/components/: auth_popup.rs  base_popup.rs  common.rs  config_screen.rs  confirmation_popup.rs  error_popup.rs  global_key_watcher.rs  help_bar.rs  help_screen.rs  label.rs  loading_indicator.rs  message_details.rs  messages.rs  mod.rs  namespace_picker.rs  number_input_popup.rs  page_size_popup.rs  password_popup.rs  queue_picker.rs  resource_group_picker.rs  state.rs  subscription_picker.rs  success_popup.rs  text_label.rs  theme_picker.rs  validation_patterns.rs
ui/src/components/help/: content.rs  mod.rs  rendering.rs
ui/src/components/message_details/: component.rs  editing.rs  event_handling.rs  mod.rs  navigation.rs  rendering.rs  validation.rs
ui/src/components/messages/: component.rs  event_handling.rs  mod.rs  navigation.rs  rendering.rs  selection.rs
ui/src/config/: app.rs  auth.rs  azure.rs  bulk_operations.rs  defaults.rs  keys.rs  limits.rs  mod.rs  setup.rs  ui.rs  validation.rs  wizard.rs
ui/src/constants/: env_vars.rs  mod.rs
ui/src/models/: models.rs
ui/src/services/: auth_service.rs  mod.rs  shared_auth_state.rs
ui/src/theme/: loader.rs  manager.rs  mod.rs  types.rs  validation.rs
ui/src/utils/: auth.rs  connection_string.rs  encryption.rs  mod.rs
ui/tests/: auth_e2e_integration.rs  azure_discovery_handlers_integration.rs  backfill_integration.rs  error_integration.rs  page_size_backfill_test.rs  pagination_page_size_decrease_test.rs  pagination_sequence_gaps_test.rs  pagination_statistics_e2e.rs  queue_statistics_integration.rs  task_manager_integration.rs
ui/themes/catppuccin/: frappe.toml  latte.toml  macchiato.toml
ui/themes/default/: dark.toml  light.toml
ui/themes/nightfox/: carbonfox.toml  dawnfox.toml  duskfox.toml  nordfox.toml  terafox.toml
ui/themes/quetty/: dark.toml  light.toml
