[workspace]
resolver = "3"
members = ["server", "ui"]
exclude = ["traffic-simulator"]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
authors = ["Dawid Pereira <pereiradawid@outlook.com>"]
repository = "https://github.com/dawidpereira/quetty"
homepage = "https://github.com/dawidpereira/quetty"
documentation = "https://github.com/dawidpereira/quetty/tree/main/docs"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Azure Service Bus
azservicebus = "0.25.1"
azure_core = "0.26.0"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
  "std",
] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }

# Logging
log = "0.4"
tracing = "0.1"

# Cryptography
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"

# Configuration and directories
dirs = "6"
once_cell = "1.19"
