[package]
name = "server"
version = "0.1.0-alpha.1"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"
doctest = false

[features]
default = []
test-utils = []

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
azservicebus = "0.20.4"
azure_core = "0.25.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
futures = "0.3"
# Actor pattern support
flume = "0.11"
urlencoding = "2.1"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1.20"
# Rate limiting
governor = "0.7"
# Error handling
thiserror = "1.0"
# Logging
log = "0.4"
tracing = "0.1"
dirs = "5"
# Encryption support
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
claims = "0.8"
futures = "0.3"
proptest = "1.4"
