[package]
name = "quetty-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core Azure Service Bus client library for Quetty terminal application"
readme = "../README.md"
categories = ["api-bindings", "development-tools"]
keywords = ["azure", "servicebus", "async", "client", "library"]

[lib]
name = "server"
path = "src/lib.rs"
doctest = false

[features]
default = []
test-utils = []

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
azservicebus.workspace = true
azure_core.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
log.workspace = true
tracing.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
base64.workspace = true
rand.workspace = true
zeroize.workspace = true
sha2.workspace = true
dirs.workspace = true
once_cell.workspace = true

# Server-specific dependencies
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
futures = "0.3"
flume = "0.11"
urlencoding = "2.1"
async-trait = "0.1"
hmac = "0.12"
governor = "0.7"

[dev-dependencies]
claims = "0.8"
futures = "0.3"
proptest = "1.4"
