[package]
name = "quetty"
version = "0.1.0"
edition = "2024"

[dependencies]
server = { path = "../server" }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
tuirealm = "3.0.1"
tui-realm-stdlib = "3.0.0"
tui-realm-textarea = { version = "2.1.0", features = ["clipboard", "search"] }
copypasta = "0.10.2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
azservicebus = "0.20.4"
config = "0.15.11"
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "2.0"
toml = "0.8"
once_cell = "1.19"
# Logging
log = "0.4"
env_logger = "0.11"
fern = { version = "0.7", features = ["colored"] }

[dev-dependencies]
claims = "0.8"
tempfile = "3.8"
futures = "0.3"
azure_core = "0.25.0"
