[package]
name = "quetty"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Terminal-based Azure Service Bus queue manager with intuitive TUI interface"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["azure", "servicebus", "terminal", "tui", "queue"]

[[bin]]
name = "quetty"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
quetty_server = { path = "../server", package = "quetty-server", version = "0.1.0" }

# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
azservicebus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
log.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
base64.workspace = true
rand.workspace = true
zeroize.workspace = true
sha2.workspace = true
dirs.workspace = true
once_cell.workspace = true

# UI-specific dependencies
time = { version = "0.3", features = ["serde"] }
tuirealm = "3.0.1"
tui-realm-stdlib = "3.0"
tui-realm-textarea = { version = "2.1", features = ["clipboard", "search"] }
copypasta = "0.10"
open = "5.3"
config = "0.15"
dotenv = "0.15"
toml = "0.9"
env_logger = "0.11"
fern = { version = "0.7", features = ["colored"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
claims = "0.8"
tempfile = "3.8"
futures = "0.3"
azure_core.workspace = true
